--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "ai": "2.2.31",
-    "next": "14.0.3",
+    "next": "^14.1.0",
     "openai": "4.16.1",
     "react": "18.2.0",
     "react-dom": "^18.2.0"
@@ -21,7 +21,7 @@
     "@types/react-dom": "18.2.4",
     "autoprefixer": "^10.4.14",
     "eslint": "^7.32.0",
-    "eslint-config-next": "13.4.12",
+    "eslint-config-next": "^14.1.0",
     "postcss": "^8.4.23",
     "tailwindcss": "^3.3.2",
     "typescript": "5.1.3"
