--- a/package.json
+++ b/package.json
@@ -10,10 +10,10 @@
   },
   "dependencies": {
     "ai": "2.2.31",
-    "next": "^14.1.0",
-    "openai": "4.16.1",
-    "react": "18.2.0",
-    "react-dom": "^18.2.0"
+    "next": "^14.2.13",
+    "openai": "^4.16.1",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
     "@types/node": "^17.0.12",
